# advent-of-code-2022

./: advent-of-code2022.cabal
app/: Main.hs
data/: day05.txt  day15.txt
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  MyLib.hs
testdata/: day05.txt
