cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0
synopsis:           Solutions in Haskell for Advent of Code 2022

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Chad Groft
maintainer:         clgroft@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MyLib,
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
        Day09,
        Day10,
        Day11,
        Day12


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        array ^>=0.5.4,
        containers ^>=0.6.5.1,
        deque ^>=0.4.4,
        fgl ^>=5.8.0.0,
        ghc ^>=9.2.5
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2 -Wall

executable advent-of-code2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.0.0,
        advent-of-code2022,
        array ^>=0.5.4

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N

test-suite advent-of-code2022-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
